--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/art": "^1.1.2",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/native": "^7.0.13",
@@ -19,8 +20,10 @@
     "@youssefprodev/rn-currency-picker": "^0.1.3",
     "react": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-calendars": "^1.1307.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-pie-chart": "^3.1.0",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
     "react-native-svg": "^15.10.1",
