--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/art": "^1.1.2",
+    "@react-native-firebase/auth": "^21.6.1",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/native": "^7.0.13",
@@ -23,6 +23,7 @@
     "react-native-calendars": "^1.1307.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-otp-entry": "^1.8.1",
     "react-native-pie-chart": "^3.1.0",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
