--- a/ios/DebtPayoffPlanner/Info.plist
+++ b/ios/DebtPayoffPlanner/Info.plist
@@ -44,6 +44,10 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>photo access.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>photo access</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
