--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-calendars": "^1.1307.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-image-crop-picker": "^0.41.6",
     "react-native-otp-entry": "^1.8.1",
     "react-native-pie-chart": "^3.1.0",
     "react-native-safe-area-context": "^5.0.0",
